--- a/css/scss/components/_contents.scss
+++ b/css/scss/components/_contents.scss
@@ -1,8 +1,10 @@
 .unslate_co--section {
 	padding: 3.5rem 0;
+
 	@include media-breakpoint-down(sm) {
 		padding: 2rem 0;
 	}
+
 	a {
 		&:hover {
 			color: $black;
@@ -14,6 +16,7 @@
 	font-size: 32px;
 	color: $black;
 	font-weight: 900;
+
 	&.divider {
 		&:before {
 			position: absolute;
@@ -21,26 +24,28 @@
 		}
 	}
 }
+
 .heading-h3 {
 	font-size: 26px;
 	font-weight: 900;
 	color: $black;
 }
+
 .lead {
 	font-size: 18px;
 	line-height: 30px
 }
 
-.section-heading-wrap {
+.section-heading-wrap {}
 
-}
 .relative {
 	position: relative;
 }
 
-figure{
+figure {
 	&.dotted-bg {
 		position: relative;
+
 		&:before {
 			z-index: -1;
 			content: "";
@@ -51,6 +56,7 @@ figure{
 			height: 224px;
 			background-image: url('../images/dotted_light.png');
 			background-repeat: no-repeat;
+
 			@include media-breakpoint-down(md) {
 				right: 0px;
 			}
@@ -62,102 +68,121 @@ figure{
 
 // custom gutter
 .gutter-v1 {
-    margin-right: -1px!important;
-    margin-left: -1px!important;
-    @include media-breakpoint-down(md) {
-	  	margin-left: -15px!important;
-	  	margin-right: -15px!important;
-	  }
-  > .col,
-  > [class*="col-"] {
-    padding-right: 1px!important;
-    padding-left: 1px!important;
-    @include media-breakpoint-down(md) {
-    	padding-right: 15px!important;
-    	padding-left: 15px!important;
-    }
-  }
+	margin-right: -1px !important;
+	margin-left: -1px !important;
+
+	@include media-breakpoint-down(md) {
+		margin-left: -15px !important;
+		margin-right: -15px !important;
+	}
+
+	>.col,
+	>[class*="col-"] {
+		padding-right: 1px !important;
+		padding-left: 1px !important;
+
+		@include media-breakpoint-down(md) {
+			padding-right: 15px !important;
+			padding-left: 15px !important;
+		}
+	}
 }
+
 .gutter-v2 {
-    margin-right: -2px!important;
-    margin-left: -2px!important;
-    @include media-breakpoint-down(md) {
-	  	margin-left: -15px!important;
-	  	margin-right: -15px!important;
-	  }
-  > .col,
-  > [class*="col-"] {
-  	margin-bottom: 4px;
-    padding-right: 2px!important;
-    padding-left: 2px!important;
-    @include media-breakpoint-down(md) {
-    	padding-right: 15px!important;
-    	padding-left: 15px!important;
-    }
-  }
+	margin-right: -2px !important;
+	margin-left: -2px !important;
+
+	@include media-breakpoint-down(md) {
+		margin-left: -15px !important;
+		margin-right: -15px !important;
+	}
+
+	>.col,
+	>[class*="col-"] {
+		margin-bottom: 4px;
+		padding-right: 2px !important;
+		padding-left: 2px !important;
+
+		@include media-breakpoint-down(md) {
+			padding-right: 15px !important;
+			padding-left: 15px !important;
+		}
+	}
 }
+
 .gutter-v3 {
-  margin-left: -60px!important;
-  margin-right: -60px!important;
-  @include media-breakpoint-down(md) {
-  	margin-left: -15px!important;
-  	margin-right: -15px!important;
-  }
-  > .col,
-  > [class*="col-"] {
-    padding-right: 60px!important;
-    padding-left: 60px!important;
-    @include media-breakpoint-down(md) {
-    	padding-right: 15px!important;
-    	padding-left: 15px!important;
-    }
-  }
+	margin-left: -60px !important;
+	margin-right: -60px !important;
+
+	@include media-breakpoint-down(md) {
+		margin-left: -15px !important;
+		margin-right: -15px !important;
+	}
+
+	>.col,
+	>[class*="col-"] {
+		padding-right: 60px !important;
+		padding-left: 60px !important;
+
+		@include media-breakpoint-down(md) {
+			padding-right: 15px !important;
+			padding-left: 15px !important;
+		}
+	}
 }
+
 .gutter-v4 {
-    margin-right: -10px!important;
-    margin-left: -10px!important;
-  > .col,
-  > [class*="col-"] {
-  	margin-bottom: 20px;
-    padding-right: 10px!important;
-    padding-left: 10px!important;
-  }
+	margin-right: -10px !important;
+	margin-left: -10px !important;
+
+	>.col,
+	>[class*="col-"] {
+		margin-bottom: 20px;
+		padding-right: 10px !important;
+		padding-left: 10px !important;
+	}
 }
 
 .gutter-isotope-item {
-    margin-right: -15px!important;
-    margin-left: -15px!important;
-    @include media-breakpoint-down(md) {
-	  	margin-left: -15px!important;
-	  	margin-right: -15px!important;
-	  }
-  > .col,
-  > [class*="col-"] {
-    padding-right: 15px!important;
-    padding-left: 15px!important;
-    
-    @include media-breakpoint-down(md) {
-    	padding-right: 15px!important;
-    	padding-left: 15px!important;
-    }
-  }
+	margin-right: -15px !important;
+	margin-left: -15px !important;
+
+	@include media-breakpoint-down(md) {
+		margin-left: -15px !important;
+		margin-right: -15px !important;
+	}
+
+	>.col,
+	>[class*="col-"] {
+		padding-right: 15px !important;
+		padding-left: 15px !important;
+
+		@include media-breakpoint-down(md) {
+			padding-right: 15px !important;
+			padding-left: 15px !important;
+		}
+	}
 
 }
+
 .isotope-mb-2 {
-	margin-bottom: 30px!important;
+	margin-bottom: 30px !important;
 }
 
 .feature-v1 {
 	line-height: 28px;
+
 	@include media-breakpoint-down(sm) {
 		text-align: center;
 	}
+
 	h3 {
 		font-size: 22px;
 		font-weight: 900;
 	}
+
 	p {
-		font-size: 16px;	
+		font-size: 16px;
 	}
 }
 
@@ -165,12 +190,14 @@ figure{
 .counter-v1 {
 	.number-wrap {
 		display: block;
+
 		.number {
 			font-size: 69px;
 			font-weight: 900;
 			font-family: $font-family-sans-serif-secondary;
 			color: $primary;
 		}
+
 		.append-text {
 			position: relative;
 			top: -30px;
@@ -179,6 +206,7 @@ figure{
 
 		}
 	}
+
 	.counter-label {
 		text-transform: uppercase;
 		letter-spacing: .1rem;
@@ -203,11 +231,13 @@ figure{
 		position: relative;
 		z-index: 1;
 		box-shadow: 0px 30px 0 -20px rgba($primary, 1);
+
 		@include media-breakpoint-down(md) {
 			font-size: 16px;
 			line-height: 32px;
 			padding: 30px 30px 50px 30px;
 		}
+
 		.quote {
 			display: block;
 			font-size: 80px;
@@ -220,128 +250,153 @@ figure{
 		z-index: 2;
 		margin-top: -45px;
 		position: relative;
+
 		img {
 			width: 90px;
 			margin: 0 auto 30px auto;
 			border-radius: 50%;
 			box-shadow: 0 15px 30px 0 rgba($black, .2);
 		}
+
 		h3 {
 			font-size: 20px;
 			margin: 0;
 		}
+
 		.position {
 			font-size: 12px;
 			color: rgba($black, .5);
 		}
-		
+
 	}
 }
 
 // owl slider custom
-.testimonial-slider, .single-slider {
+.testimonial-slider,
+.single-slider {
+
 	// position: relative;
 	.owl-stage {
 		// position: relative;
 		overflow: hidden;
 
 	}
+
 	.owl-nav {
-    @include media-breakpoint-down(md) {
-      display: none;
-    }
-    .owl-prev,
-    .owl-next {
-      position: absolute;
-      bottom: -70px;
-      z-index: 99;
-      transform: translateY(-50%);
-      color: $black!important;
-      span {
-      	font-size: 30px;
-      }
-      &:hover {
-        color: $black;
-      }
-      &:active, &:focus {
-      	outline: none;
-      }
-    }
-    .owl-prev {
-      left: 60px;
-    }
-    .owl-next {
-      right: 60px;
-    }
-  }
-  .owl-dots {
-  	position: absolute;
-  	width: 100%;
-  	text-align: center;
-  	bottom: -50px;
-  	.owl-dot {
-  		display: inline-block;
-  		> span {
-  			margin: 4px;
-  			display: inline-block;
-	  		width: 8px;
-	  		height: 8px;
-	  		border-radius: 50%;
-	  		background: rgba($black, .2);
-	  		transition: .3s all ease;
-  		}
-  		&.active {
-				> span {
+		@include media-breakpoint-down(md) {
+			display: none;
+		}
+
+		.owl-prev,
+		.owl-next {
+			position: absolute;
+			bottom: -70px;
+			z-index: 99;
+			transform: translateY(-50%);
+			color: $black !important;
+
+			span {
+				font-size: 30px;
+			}
+
+			&:hover {
+				color: $black;
+			}
+
+			&:active,
+			&:focus {
+				outline: none;
+			}
+		}
+
+		.owl-prev {
+			left: 60px;
+		}
+
+		.owl-next {
+			right: 60px;
+		}
+	}
+
+	.owl-dots {
+		position: absolute;
+		width: 100%;
+		text-align: center;
+		bottom: -50px;
+
+		.owl-dot {
+			display: inline-block;
+
+			>span {
+				margin: 4px;
+				display: inline-block;
+				width: 8px;
+				height: 8px;
+				border-radius: 50%;
+				background: rgba($black, .2);
+				transition: .3s all ease;
+			}
+
+			&.active {
+				>span {
 					background: rgba($black, 1);
 				}
-  		}
-  		&:active, &:focus {
-  			outline: none;
-  		}
-  	}
-  }
+			}
+
+			&:active,
+			&:focus {
+				outline: none;
+			}
+		}
+	}
 }
 
 .single-slider {
 	margin-bottom: 90px;
-	.owl-prev, .owl-next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 99;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: rgba($black, .05)!important;
-    transition: .3s all ease;
+
+	.owl-prev,
+	.owl-next {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		z-index: 99;
+		width: 60px;
+		height: 60px;
+		border-radius: 50%;
+		background: rgba($black, .05) !important;
+		transition: .3s all ease;
+
 		&:hover {
-			background: rgba($black, .1)!important;
+			background: rgba($black, .1) !important;
 		}
-    span {
-    	position: absolute;
-    	top: 50%;
-    	left: 50%;
-    	transform: translate(-50%, -50%);
-	
-    	&:before {
-    		font-size: 40px;
-    	}
-    }
-  }
- 
+
+		span {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+
+			&:before {
+				font-size: 40px;
+			}
+		}
+	}
+
 }
+
 .hero-slider-wrap {
 	.owl-dots {
-  	position: absolute;
-  	width: 100%;
-  	text-align: center;
-  	bottom: 30px;
-  }
+		position: absolute;
+		width: 100%;
+		text-align: center;
+		bottom: 30px;
+	}
 }
 
 // Blog post
 .blog-post-entry {
 	margin-bottom: 30px;
+
 	.post-meta {
 		font-family: $font-family-sans-serif-secondary;
 	}
@@ -349,15 +404,17 @@ figure{
 
 // form
 .form-outline-style-v1 {
-	
-	.form-group	{
+
+	.form-group {
 		position: relative;
 		margin-bottom: 50px;
+
 		label {
 			position: absolute;
 			top: 5px;
 			transition: .3s all ease;
 		}
+
 		.form-control {
 			border: none;
 			background: none;
@@ -366,12 +423,15 @@ figure{
 			border-radius: 0;
 			color: $black;
 			border-bottom: 1px solid rgba($black, .5);
-			&:active, &:focus {
+
+			&:active,
+			&:focus {
 				outline: none;
 				box-shadow: none;
 				border-bottom: 1px solid rgba($black, 1);
 			}
 		}
+
 		label {
 			font-size: 12px;
 			display: block;
@@ -380,9 +440,11 @@ figure{
 			text-transform: uppercase;
 			font-weight: 900;
 		}
+
 		&.focus {
 			background: $black;
 		}
+
 		&.field--not-empty {
 			label {
 				margin-top: -25px;
@@ -392,29 +454,33 @@ figure{
 }
 
 .form-control {
-			border: none;
-			background: none;
-			padding-left: 0;
-			padding-right: 0;
-			border-radius: 0;
-			color: $black;
-			border-bottom: 1px solid rgba($black, .5);
-			&:active, &:focus {
-				background: none;
-				outline: none;
-				box-shadow: none;
-				border-bottom: 1px solid rgba($black, 1);
-			}
-		}
+	border: none;
+	background: none;
+	padding-left: 0;
+	padding-right: 0;
+	border-radius: 0;
+	color: $black;
+	border-bottom: 1px solid rgba($black, .5);
+
+	&:active,
+	&:focus {
+		background: none;
+		outline: none;
+		box-shadow: none;
+		border-bottom: 1px solid rgba($black, 1);
+	}
+}
 
 
 .contact-info-v1 {
 	@include media-breakpoint-down(sm) {
 		text-align: center;
 	}
-	> div {
+
+	>div {
 		margin-bottom: 30px;
 	}
+
 	.contact-info-label {
 		font-size: 11px;
 		letter-spacing: .1rem;
@@ -422,6 +488,7 @@ figure{
 		text-transform: uppercase;
 		color: rgba($black, .5);
 	}
+
 	.contact-info-val {
 		font-size: 20px;
 		color: $black;
@@ -434,6 +501,7 @@ figure{
 		margin-bottom: 40px;
 		font-size: 50px;
 		font-weight: 900;
+
 		@include media-breakpoint-down(md) {
 			font-size: 30px;
 		}
@@ -448,6 +516,7 @@ figure{
 		opacity: 0;
 		display: none;
 	}
+
 	.unslate_co--close-portfolio {
 		position: absolute;
 		top: 5px;
@@ -459,6 +528,7 @@ figure{
 		background-color: rgba($black, .1);
 		border-radius: 30px;
 		transition: .3s all ease;
+
 		.close-portfolio-label {
 			font-size: 14px;
 			top: 25px;
@@ -471,24 +541,30 @@ figure{
 			visibility: hidden;
 			transition: .3s all ease;
 		}
+
 		.wrap-icon-close {
 			font-size: 30px;
 			position: relative;
 			transition: .3s all ease;
 		}
+
 		&:hover {
 			.wrap-icon-close {
 				transform: rotate(90deg);
 			}
+
 			.close-portfolio-lanel {
 				opacity: 1;
 				left: -10px;
 				visibility: visible;
-			}	
+			}
 		}
-		&:hover, &:focus {
+
+		&:hover,
+		&:focus {
 			border-color: transparent;
 			background-color: rgba($black, .15);
+
 			.close-portfolio-label {
 				right: 20px;
 				opacity: 1;
@@ -500,8 +576,9 @@ figure{
 	.close-portfolio--content {
 		right: 50%;
 		transform: translateX(50%);
+
 		.close-portfolio-label {
-			right: 50%!important;
+			right: 50% !important;
 			transform: translateX(50%);
 			top: 50px;
 		}
@@ -517,10 +594,12 @@ figure{
 		text-transform: uppercase;
 		letter-spacing: .1rem;
 		color: rgba($black, .5);
-	}	
+	}
+
 	.detail-val {
 		font-size: 16px;
 		color: $black;
+
 		a {
 			color: $black;
 		}
@@ -532,8 +611,10 @@ figure{
 	text-align: center;
 	font-weight: 300;
 	color: rgba($black, .5);
+
 	a {
 		color: rgba($black, .6);
+
 		&:hover {
 			color: $black;
 		}
@@ -541,30 +622,36 @@ figure{
 
 	.footer-site-logo {
 		margin-bottom: 30px;
+
 		a {
 			font-size: 30px;
 			font-weight: 900;
 			font-family: $font-family-sans-serif;
 			color: $black;
+
 			span {
 				color: $primary;
 			}
 		}
 	}
-	.site-copyright {
-	}
+
+	.site-copyright {}
+
 	.footer-site-social {
 		padding: 0;
 		margin: 0;
 		margin-bottom: 30px;
+
 		li {
 			padding: 0;
 			margin: 0;
 			list-style: none;
 			display: inline-block;
+
 			@include media-breakpoint-down(md) {
 				display: block;
 			}
+
 			a {
 				display: inline-block;
 				padding-left: 20px;
@@ -574,7 +661,9 @@ figure{
 				text-transform: uppercase;
 				font-size: 12px;
 				font-weight: bold;
-				&:hover, &:focus {
+
+				&:hover,
+				&:focus {
 					color: $black;
 				}
 			}
@@ -594,41 +683,45 @@ figure{
 	transform: translateX(-50%);
 	position: absolute;
 }
-.loader-portfolio, .site-loader {
-  width: 2rem;
-  height: 2rem;
-  margin: 2rem auto;
-  border-radius: 50%;
-  border: 0.3rem solid rgba($white, 0.3);
-  border-top-color: $white;
-  animation: 1.5s spin infinite linear;
-  &.dark {
-  	border: 0.3rem solid rgba($black, 0.3);
-  	border-top-color: $black;
-  }
+
+.loader-portfolio,
+.site-loader {
+	width: 2rem;
+	height: 2rem;
+	margin: 2rem auto;
+	border-radius: 50%;
+	border: 0.3rem solid rgba($white, 0.3);
+	border-top-color: $white;
+	animation: 1.5s spin infinite linear;
+
+	&.dark {
+		border: 0.3rem solid rgba($black, 0.3);
+		border-top-color: $black;
+	}
 }
 
 @keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 
 .jarallax {
-  position: relative;
-  z-index: 0;
+	position: relative;
+	z-index: 0;
 }
-.jarallax > .jarallax-img {
-  position: absolute;
-  object-fit: cover;
-  /* support for plugin https://github.com/bfred-it/object-fit-images */
-  font-family: 'object-fit: cover;';
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+
+.jarallax>.jarallax-img {
+	position: absolute;
+	object-fit: cover;
+	/* support for plugin https://github.com/bfred-it/object-fit-images */
+	font-family: 'object-fit: cover;';
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
 }
 
 
@@ -639,17 +732,22 @@ span.error {
 #message {
 	resize: vertical;
 }
-#form-message-warning, #form-message-success {
+
+#form-message-warning,
+#form-message-success {
 	display: none;
 }
+
 #form-message-warning {
 	color: #f64b3c;
 }
+
 #form-message-success {
 	color: #8cba51;
 	font-size: 18px;
 	font-weight: bold;
 }
+
 .submitting {
 	float: left;
 	width: 100%;
@@ -663,13 +761,15 @@ span.error {
 
 // Sticky
 .unslate_co--sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 80px;
-  &:after, &:before {
-  	content: '';
-    display: table;
-  }
+	position: -webkit-sticky;
+	position: sticky;
+	top: 80px;
+
+	&:after,
+	&:before {
+		content: '';
+		display: table;
+	}
 }
 
 
@@ -680,6 +780,7 @@ span.error {
 .comment-list {
 	padding: 0;
 	margin: 0;
+
 	.children {
 		padding: 50px 0 0 40px;
 		margin: 0;
@@ -694,20 +795,25 @@ span.error {
 		width: 100%;
 		clear: both;
 		list-style: none;
+
 		.vcard {
 			width: 80px;
 			float: left;
+
 			img {
 				width: 50px;
 				border-radius: 50%;
 			}
 		}
+
 		.comment-body {
 			float: right;
 			width: calc(100% - 80px);
+
 			h3 {
 				font-size: 20px;
 			}
+
 			.meta {
 				text-transform: uppercase;
 				font-size: 13px;
@@ -715,18 +821,20 @@ span.error {
 				color: #ccc;
 				margin-bottom: 20px;
 			}
+
 			.reply {
 				padding: 7px 15px;
-				background: rgba($black,.2);
+				background: rgba($black, .2);
 				color: $black;
 				text-transform: uppercase;
 				border-radius: 30px;
 				font-size: 11px;
 				font-weight: 900;
 				letter-spacing: .1rem;
+
 				&:hover {
 					color: $black;
-					background: rgba($black,.25);
+					background: rgba($black, .25);
 				}
 			}
 		}
@@ -742,48 +850,53 @@ span.error {
 	a {
 		line-height: 1.5;
 		font-weight: bold;
+
 		span {
 			margin-bottom: 10px;
 			font-size: 11px;
 			text-transform: uppercase;
 			color: rgba($black, .4);
 		}
+
 		padding-top: 2rem;
 		padding-bottom: 2rem;
 		display: inline-block;
 	}
-	
+
 }
 
 .lines-wrap {
 	position: absolute;
 	z-index: -1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  @include media-breakpoint-down(sm) {
-  	display: none;
-  }
-  .lines-inner {
-  	position: absolute;
-    width: 1140px;
-    left: 50%;
-    margin-left: -570px;
-    top: 0;
-    height: 100%;
-    border-left: 1px solid darken(#fafafa, 3%);
-    border-right: 1px solid darken(#fafafa, 3%);
-    .lines {
-    	position: absolute;
-	    left: 33.333333%;
-	    right: 33.333333%;
-	    height: 100%;
-	    border-left: 1px solid darken(#fafafa, 3%);
-	    border-right: 1px solid darken(#fafafa, 3%);
-    }
-  }
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+
+	@include media-breakpoint-down(sm) {
+		display: none;
+	}
+
+	.lines-inner {
+		position: absolute;
+		width: 1140px;
+		left: 50%;
+		margin-left: -570px;
+		top: 0;
+		height: 100%;
+		border-left: 1px solid darken(#fafafa, 3%);
+		border-right: 1px solid darken(#fafafa, 3%);
+
+		.lines {
+			position: absolute;
+			left: 33.333333%;
+			right: 33.333333%;
+			height: 100%;
+			border-left: 1px solid darken(#fafafa, 3%);
+			border-right: 1px solid darken(#fafafa, 3%);
+		}
+	}
 }
 
 .gsap-reveal {
@@ -793,9 +906,10 @@ span.error {
 
 	&.gsap-reveal-filter {
 		@include media-breakpoint-down(md) {
-			overflow: visible!important;
+			overflow: visible !important;
 		}
 	}
+
 	.cover {
 		position: absolute;
 		top: 0;
@@ -808,6 +922,7 @@ span.error {
 
 .gsap-reveal-hero {
 	line-height: 0;
+
 	.reveal-wrap {
 		position: relative;
 		overflow: hidden;
@@ -823,6 +938,7 @@ span.error {
 			margin-left: -100%;
 			z-index: 2;
 		}
+
 		.reveal-content {
 			line-height: 1.5;
 			z-index: 1;
@@ -836,9 +952,11 @@ span.error {
 
 
 	line-height: 0;
+
 	.reveal-wrap {
 		position: relative;
 		overflow: hidden;
+
 		.cover {
 			position: absolute;
 			top: 0;
@@ -849,9 +967,11 @@ span.error {
 			margin-left: -100%;
 			z-index: 9;
 		}
+
 		.reveal-content {
 			opacity: 0;
 			visibility: hidden;
+
 			img {
 
 				// transform: translateX(-102%);
